# mcp-server-template-python

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yaml  tests.yml
src/: __init__.py  config.py  main.py
src/resources/: __init__.py
src/tools/: __init__.py  calculator.py
src/utils/: __init__.py  helpers.py
test/: __init__.py  conftest.py  test_server.py
